fixed cell jumping in submenu bug

--- a/styles/components/CellStudio.css
+++ b/styles/components/CellStudio.css
@@ -13,7 +13,7 @@
 }
 
 .submenu-container {
-  margin-top: 0.5rem;
+  /* margin-top: 0.5rem; */
 
   & .react-colorful {
     width: auto;
